# sub_byte

./: .gitignore  README.md  eslint.config.mjs  hatch_build.py  package-lock.json  package.json  pyproject.toml  sub_byte-0.0.1.tgz  tsconfig.json
.github/workflows/: build_python.yml  pytest.yml  test.yml  type_check.yml
src/sub_byte/: __init__.py  codec.mjs  codec.py  factories.mjs  factories.mts  factories.py
src/sub_byte/codecs/dates/: core.py
src/sub_byte/codecs/dates/decode/: main.mjs
src/sub_byte/codecs/dates/encode/: __main__.py
tests/: decode.mjs  decode.py  encode.mjs  encode.py  ops_and_seeds_codecs.mjs  ops_and_seeds_codecs.py  test_encoder.py  test_int_encoder_and_decoder.py  test_int_encoder_and_decoders.py  tests.mjs  tests.mts
